--- a/Pandas2_DADS5001_2024Aug25.ipynb
+++ b/Pandas2_DADS5001_2024Aug25.ipynb
@@ -13923,6 +13923,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Notice:** ใช้คำสั่งสำเร็จรูปแทน select_dtypes การใช้ Boolean (Flexible row or column) โดยที่\n",
+        "- include จะเก็บ datatype อะไรไว้\n",
+        "- exclude ไม่เก็บ datatype อะไรออกไป"
+      ],
+      "metadata": {
+        "id": "-sN96sPri9jg"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Select columns from their dtypes\n",
@@ -14518,7 +14529,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "For pandas.Series:"
+        "For pandas.**Series:**"
       ],
       "metadata": {
         "id": "WZEt8mGYoeDA"
@@ -14528,7 +14539,7 @@
       "cell_type": "code",
       "source": [
         "# Count non-NA in a pandas.Series\n",
-        "df['type2'].count()"
+        "df['type2'].count() #ให้มันนับให้"
       ],
       "metadata": {
         "id": "74ddAG1U-mux",
@@ -14550,6 +14561,17 @@
           "execution_count": 59
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Note:** คำสั่ง.isna() กับ .isnull() เป็น Syn\n",
+        "- ไม่ใช้ count จะออกมา เป็นค่า boolean (True, False)\n",
+        "- แต่อยากทราบว่า มีกี่ตัว จึงใช้ count เพื่อการไปวิเคราะห์ต่อ"
+      ],
+      "metadata": {
+        "id": "fg07uHXPkuaV"
+      }
     },
     {
       "cell_type": "code",
@@ -14665,7 +14687,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "For pandas.DataFrame:"
+        "For pandas.**DataFrame:**"
       ],
       "metadata": {
         "id": "eNq2zLHrASFB"
@@ -14675,17 +14697,17 @@
       "cell_type": "code",
       "source": [
         "# Count non-NA values for each column in a pandas.DataFrame\n",
-        "df.count()   # default: axis=0"
+        "df.count()   # default: axis=0 แนวคอลัมน์ ทิ่มหัวลง"
       ],
       "metadata": {
         "id": "snF9lbhF_Rsz",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 304
+          "height": 210
         },
-        "outputId": "028dfe47-fca5-44cd-dc15-a14a98b352ea"
+        "outputId": "576fa1c6-ad6b-4c2b-fad0-a03ec9b0d990"
       },
-      "execution_count": 61,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -14693,9 +14715,6 @@
             "text/plain": [
               "pokedex_number    801\n",
               "name              801\n",
-              "hp                801\n",
-              "weight_kg         781\n",
-              "height_m          781\n",
               "type1             801\n",
               "type2             417\n",
               "dtype: int64"
@@ -14732,18 +14751,6 @@
               "      <td>801</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>hp</th>\n",
-              "      <td>801</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>weight_kg</th>\n",
-              "      <td>781</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>height_m</th>\n",
-              "      <td>781</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
               "      <th>type1</th>\n",
               "      <td>801</td>\n",
               "    </tr>\n",
@@ -14757,7 +14764,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 61
+          "execution_count": 80
         }
       ]
     },
@@ -14765,7 +14772,7 @@
       "cell_type": "code",
       "source": [
         "# Count non-NA values for each row in a pandas.DataFrame\n",
-        "df.count(axis=1)"
+        "df.count(axis=1) #ลองเปลี่ยน axis"
       ],
       "metadata": {
         "id": "GH31Zty3_tTH",
@@ -14773,25 +14780,25 @@
           "base_uri": "https://localhost:8080/",
           "height": 458
         },
-        "outputId": "c47b73db-a348-4a59-e69b-85d16a02d39d"
+        "outputId": "97e735d9-16da-4008-8cb2-2bb8c608363d"
       },
-      "execution_count": 62,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0      7\n",
-              "1      7\n",
-              "2      7\n",
-              "3      6\n",
-              "4      6\n",
+              "0      4\n",
+              "1      4\n",
+              "2      4\n",
+              "3      3\n",
+              "4      3\n",
               "      ..\n",
-              "796    7\n",
-              "797    7\n",
-              "798    7\n",
-              "799    6\n",
-              "800    7\n",
+              "796    4\n",
+              "797    4\n",
+              "798    4\n",
+              "799    3\n",
+              "800    4\n",
               "Length: 801, dtype: int64"
             ],
             "text/html": [
@@ -14819,23 +14826,23 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>7</td>\n",
+              "      <td>4</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>7</td>\n",
+              "      <td>4</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>7</td>\n",
+              "      <td>4</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>6</td>\n",
+              "      <td>3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>6</td>\n",
+              "      <td>3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -14843,23 +14850,23 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>796</th>\n",
-              "      <td>7</td>\n",
+              "      <td>4</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>797</th>\n",
-              "      <td>7</td>\n",
+              "      <td>4</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>798</th>\n",
-              "      <td>7</td>\n",
+              "      <td>4</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>799</th>\n",
-              "      <td>6</td>\n",
+              "      <td>3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>800</th>\n",
-              "      <td>7</td>\n",
+              "      <td>4</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -14868,9 +14875,18 @@
             ]
           },
           "metadata": {},
-          "execution_count": 62
+          "execution_count": 81
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- ทำการทรานฟอร์ม several value แต่ละ index ในเมทริกซ์ ให้กลายเป็นแค่ค่า Ture หรือ False แล้วนำ Duplicate ต่อ ว่าจะเอา select row/col"
+      ],
+      "metadata": {
+        "id": "PZhtEdJRmZ8U"
+      }
     },
     {
       "cell_type": "code",
@@ -15279,6 +15295,15 @@
       ],
       "metadata": {
         "id": "6pFNRhAKAiD2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- เป้นการ set ค่าใดๆ บ้าง define ให้เป็น NaN"
+      ],
+      "metadata": {
+        "id": "ay08jsALm2xz"
       }
     },
     {
@@ -15781,6 +15806,15 @@
           "execution_count": 64
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**notna**"
+      ],
+      "metadata": {
+        "id": "L9DTuzP1nMZy"
+      }
     },
     {
       "cell_type": "code",
@@ -17472,7 +17506,7 @@
       "cell_type": "code",
       "source": [
         "# Drop missing data in a 1D pandas.Series\n",
-        "df2 = df['weight_kg'].dropna()\n",
+        "df2 = df['weight_kg'].dropna() #ทำ 2 คำสั่งคือ หาค่าที่เป็น weight_kg และทำการ drop ไปเลย\n",
         "\n",
         "print(df2.shape)\n",
         "df2"
@@ -17601,7 +17635,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Drop all columns containing NA\n",
+        "# Drop all columns containing NA #ดรอปทุกคอลัมน์ที่มีค่า na ปนอยู่ อย่างโหดปุดๆ!!! (คอลัมน์ คือ feature โหดร้ายที่ดรอป var ทิ้ง)\n",
         "df.dropna(axis=1)    # This equals df.dropna(axis=1, how='any')"
       ],
       "metadata": {
@@ -17963,9 +17997,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Note:** ความยากที่การ filt ที่เหมาะสมก่อนจะทำการ drop แบบใด!\n",
+        "(ค่อนไปยากกับการใช้คำสั่ง)"
+      ],
+      "metadata": {
+        "id": "R59pH9WspQ2n"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Drop all rows in which any NA is present.\n",
+        "# Drop all rows in which any NA is present. #ความยากที่การ filt ที่เหมาะสมก่อนจะทำการ drop แบบใด!\n",
         "\n",
         "# Style 1\n",
         "df.dropna()   # This equals df.dropna(axis=0, how='any')\n",
@@ -18894,7 +18938,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 3.1 Check for duplication\n",
+        "## 3.1 Check for duplication (ตรวจสอบซ้ำ)\n",
         "\n",
         "- In pandas, we can check for duplicated values (in Series) or duplicated rows (in DataFrame) by `pandas.Series.duplicated()` and `pandas.DataFrame.duplicated()` respectively."
       ],
@@ -19505,6 +19549,16 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- subset=['type1','type2'])  ใช้ dataset โดยใช้คำสั่ง subset\n",
+        "- Parameter: keep ช่วยมาร์ค Na Position (อาจารย์เขียนตัวอย่าง ค่าของ keep 2 ค่า คือ First กับ False)"
+      ],
+      "metadata": {
+        "id": "-Y-OMqRfpxkG"
+      }
     },
     {
       "cell_type": "code",
@@ -21343,7 +21397,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# PRACTICE\n",
+        "# PRACTICE (การบ้าน)\n",
         "\n",
         "1. (1 point) Display pokedex number, English name, Japanese name, and hp values regarding all 1st-generation pokemons. The results must be ordered starting from the maximum hp to the minimum hp (for the same hp value, order by the pokedex number from small to large).\n",
         "\n",
@@ -21354,6 +21408,15 @@
       "metadata": {
         "id": "D__8F4ofcFOd"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0fR-2n6DrCG3"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
