--- a/Pandas4_DADS5001_2024Sep9.ipynb.ipynb
+++ b/Pandas4_DADS5001_2024Sep9.ipynb.ipynb
@@ -13923,6 +13923,16 @@
     {
       "cell_type": "markdown",
       "source": [
+        "- แบบขวา **Long Format** --> **seaborn** มักจะใช้ เพื่อนำไป **plot graph**\n",
+        "- แบบซ้าย Wide Format --> เหมาะกับการให้คนอ่าน จะเข้าใจง่ายกว่า"
+      ],
+      "metadata": {
+        "id": "YH5VP7MS-boJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## 3.1 Pivot table (from long to wide)\n",
         "\n"
       ],
