--- a/Pandas4_DADS5001_2024Sep9.ipynb.ipynb
+++ b/Pandas4_DADS5001_2024Sep9.ipynb.ipynb
@@ -14339,7 +14339,7 @@
         "# - 'index' refers to the column whose unique values will be used as row labels\n",
         "# - 'columns' refers to the column whose unique values will be used as column labels\n",
         "# - 'values' refers to the column whose values will be used to fill in the DataFrame\n",
-        "df1 = df.pivot(index='foo', columns='bar', values='baz')\n",
+        "df1 = df.pivot(index='foo', columns='bar', values='baz') #index=> \"row\", values=> \"parameter\"\n",
         "\n",
         "print('=== After pivot() ===')\n",
         "display(df1)\n",
