--- a/HW/HW2_6620422002_Ratanakamon_Somklang.ipynb
+++ b/HW/HW2_6620422002_Ratanakamon_Somklang.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCT8Ny4/6Hw3hV+IC3PWdV",
+      "authorship_tag": "ABX9TyNd9dKJAzKRQ7sJw5TOMqTA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1164,7 +1164,7 @@
         "avg_hp1 = df_pokemon.groupby('type1')['hp'].transform('mean')\n",
         "above_avg_hp = df_pokemon[df_pokemon['hp'] > avg_hp1]\n",
         "result = above_avg_hp.sort_values(['type1', 'hp'], ascending=[True, False])\n",
-        "result[['pokedex_number','name','hp', 'type1', ]]"
+        "result[['pokedex_number','name','hp', 'type1']]"
       ],
       "metadata": {
         "id": "98gc8n2izjy5",
@@ -1172,9 +1172,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 419
         },
-        "outputId": "295c0fcc-bee1-4279-e8dd-2b4857889383"
+        "outputId": "d758725d-4f48-4f34-a59e-7b78aa906d4c"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1197,7 +1197,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8a28530e-3c08-4143-b3ae-e25ecdcc328f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-aef62190-2da0-4a57-ad95-12cb4f8c9997\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1307,7 +1307,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8a28530e-3c08-4143-b3ae-e25ecdcc328f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-aef62190-2da0-4a57-ad95-12cb4f8c9997')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1359,12 +1359,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-8a28530e-3c08-4143-b3ae-e25ecdcc328f button.colab-df-convert');\n",
+              "        document.querySelector('#df-aef62190-2da0-4a57-ad95-12cb4f8c9997 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-8a28530e-3c08-4143-b3ae-e25ecdcc328f');\n",
+              "        const element = document.querySelector('#df-aef62190-2da0-4a57-ad95-12cb4f8c9997');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1384,8 +1384,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-07085025-2ab2-4c96-93a1-1ec8bbd02971\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-07085025-2ab2-4c96-93a1-1ec8bbd02971')\"\n",
+              "<div id=\"df-f9bdd3d9-98e1-4215-882a-0c0a695f2c73\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f9bdd3d9-98e1-4215-882a-0c0a695f2c73')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1504,7 +1504,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-07085025-2ab2-4c96-93a1-1ec8bbd02971 button');\n",
+              "        document.querySelector('#df-f9bdd3d9-98e1-4215-882a-0c0a695f2c73 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1516,11 +1516,11 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"result[['pokedex_number','name','hp', 'type1', ]]\",\n  \"rows\": 362,\n  \"fields\": [\n    {\n      \"column\": \"pokedex_number\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 227,\n        \"min\": 3,\n        \"max\": 801,\n        \"num_unique_values\": 362,\n        \"samples\": [\n          274,\n          269,\n          168\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"name\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 362,\n        \"samples\": [\n          \"Nuzleaf\",\n          \"Dustox\",\n          \"Ariados\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"hp\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 24,\n        \"min\": 57,\n        \"max\": 255,\n        \"num_unique_values\": 68,\n        \"samples\": [\n          88,\n          100,\n          77\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"type1\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 18,\n        \"samples\": [\n          \"bug\",\n          \"dark\",\n          \"ghost\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"result[['pokedex_number','name','hp', 'type1']]\",\n  \"rows\": 362,\n  \"fields\": [\n    {\n      \"column\": \"pokedex_number\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 227,\n        \"min\": 3,\n        \"max\": 801,\n        \"num_unique_values\": 362,\n        \"samples\": [\n          274,\n          269,\n          168\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"name\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 362,\n        \"samples\": [\n          \"Nuzleaf\",\n          \"Dustox\",\n          \"Ariados\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"hp\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 24,\n        \"min\": 57,\n        \"max\": 255,\n        \"num_unique_values\": 68,\n        \"samples\": [\n          88,\n          100,\n          77\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"type1\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 18,\n        \"samples\": [\n          \"bug\",\n          \"dark\",\n          \"ghost\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
